# learnopengl

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.md  TODO
assets/shaders/: cube.frag  cube.vert  light.frag  light.vert  lines.frag  lines.vert  shader.frag  shader.vert
cmake/: assets.cmake  common.cmake  config.cmake  custom.cmake  externals.cmake  install.cmake  scripts.cmake
cmake/assets/: CMakeLists.txt
cmake/cgltf/: CMakeLists.txt
cmake/clangd/: CMakeLists.txt  clangd.in
cmake/graphviz/: CMakeLists.txt
cmake/stb/: CMakeLists.txt  stb_include.c
include/: camera.h  logger.h  material.h  mesh.h  renderer.h  shader.h  texture.h  utils.h  window.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scripts/: clangd.in  dependencies.sh  index.html
shaders/: shader.frag  shader.vert
source/: camera.c  logger.c  main.c  mesh.c  renderer.c  shader.c  texture.c  utils.c  window.c
source/core/: CMakeLists.txt  window.c
source/core/include/core/: defines.h  logger.h  window.h
source/core/include/core/utils/: string.h
source/core/source/: logger.c  window.c
source/core/source/utils/: string.c
source/game/: CMakeLists.txt  README.md
source/game/assets/shaders/: glyph.frag  glyph.vert  shader.frag  shader.vert
source/game/source/: main.c
source/loader/: CMakeLists.txt  shader.c
source/loader/include/loader/: defines.h  mesh.h  shader.h  texture.h
source/loader/source/: mesh.c  shader.c  texture.c
source/renderer/: CMakeLists.txt
source/renderer/include/renderer/: defines.h  renderer.h
source/renderer/source/: mesh.c
source/tutorials/hello-shaders/: CMakeLists.txt  README.md
source/tutorials/hello-shaders/assets/shaders/: shader.frag  shader.vert
source/tutorials/hello-shaders/source/: main.c
source/tutorials/hello-triangle/: CMakeLists.txt  README.md
source/tutorials/hello-triangle/assets/shaders/: shader.vert
source/tutorials/hello-triangle/source/: main.c
source/tutorials/shaders/: CMakeLists.txt
source/tutorials/textures/: CMakeLists.txt  README.md
source/tutorials/textures/assets/shaders/: shader.frag  shader.vert
source/tutorials/textures/source/: main.c
source/tutorials/triangle/: CMakeLists.txt
source/tutorials/triangle/source/: main.c
src/: main.c
